Toggle self invite/open in-game

--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -1329,7 +1329,7 @@
             "info": "Info",
             "invite": "Invite",
             "launch": "Launch",
-            "open_ingame": "Open in Game"
+            "open_ingame": "Open in-game"
         },
         "export_friends_list": {
             "header": "Export Friends List",
