--- a/src/localization/zh-TW/en.json
+++ b/src/localization/zh-TW/en.json
@@ -398,7 +398,8 @@
                     "sort_instance_users_by_time": "時間",
                     "sort_instance_users_by_alphabet": "字母順序",
                     "table_max_size": "表格大小",
-                    "page_size": "頁面大小："
+                    "page_size": "頁面大小：",
+                    "use_vscode_like_editor_to_show_json": "使用類似於 VS Code 的編輯器顯示 JSON"
                 },
                 "timedate": {
                     "header": "時間 / 日期",
