--- a/src/localization/ja/en.json
+++ b/src/localization/ja/en.json
@@ -1,6 +1,6 @@
 {
     "language": "日本語 (ja)",
-    "translator": "Assault1892, Yuu198, paralleltree, kazu3jp",
+    "translator": "Assault1892, Yuu198, paralleltree, kazu3jp, Cayahuanca",
     "nav_tooltip": {
         "feed": "フィード",
         "game_log": "ゲームログ",
@@ -12,6 +12,7 @@
         "notification": "通知",
         "friend_list": "フレンドリスト",
         "charts": "チャート",
+        "tools": "ツール",
         "profile": "プロフィール",
         "settings": "設定"
     },
@@ -129,12 +130,11 @@
             "copy": "コピー",
             "clear": "消去",
             "bulk_unfavorite": "一括お気に入り解除モード",
-            "refresh_tooltip": "全てのお気に入りを更新",
+            "refresh_favorites_tooltip": "全てのお気に入りを更新",
             "export": "エクスポート",
             "import": "インポート",
             "move_tooltip": "移動",
             "copy_tooltip": "コピー",
-            "self_invite_tooltip": "自分を招待",
             "unfavorite_tooltip": "お気に入り解除",
             "visibility_tooltip": "表示設定を変更",
             "rename_tooltip": "名前を変更",
@@ -186,6 +186,9 @@
                 "message": "メッセージ",
                 "boop": "Boop",
                 "groupChange": "グループ変更",
+                "event": {
+                    "announcement": "イベントのお知らせ"
+                },
                 "group": {
                     "announcement": "お知らせ",
                     "informative": "インフォメーション",
@@ -298,6 +301,7 @@
                 "notifications": "通知",
                 "wrist_overlay": "手首のオーバーレイ",
                 "discord_presence": "Discordでのゲームステータス表示",
+                "pictures": "写真",
                 "advanced": "詳細"
             },
             "general": {
@@ -327,7 +331,8 @@
                     "disable_gpu_acceleration_tooltip": "このオプションは「自分がしていることを理解している場合」にのみ変更してください。SteamVRオーバーレイに問題が発生する可能性があります。UI表示に問題が発生した場合は、これを無効に戻して再起動してください。",
                     "disable_vr_overlay_gpu_acceleration": "VRオーバーレイのGPUアクセラレーション無効化",
                     "disable_vr_overlay_gpu_acceleration_tooltip": "GPUアクセラレーションの無効化は、VRCXのクラッシュやメモリリークを引き起こす可能性があります。問題が発生した場合は、このオプションを有効に戻して再起動してください。",
-                    "proxy": "プロキシ設定"
+                    "proxy": "プロキシ設定",
+                    "startup_linux": "システムの起動時にVRCXを最小化した状態で起動するには、自動起動用のVRCX.desktopファイルに \"--startup\" 引数を追加します。"
                 },
                 "favorites": {
                     "header": "お気に入りのフレンド",
@@ -374,7 +379,9 @@
                     "theme_mode_system": "システム",
                     "theme_mode_light": "ライト",
                     "theme_mode_dark": "ダーク",
+                    "theme_mode_blue": "ブルー",
                     "theme_mode_darkblue": "ダークブルー",
+                    "theme_mode_amoled": "純黒 (Amoled)",
                     "theme_mode_darkvanillaold": "ダークバニラ (レガシー)",
                     "theme_mode_darkvanilla": "ダークバニラ",
                     "theme_mode_pink": "ピンク",
@@ -382,6 +389,7 @@
                     "zoom": "ズーム",
                     "vrcplus_profile_icons": "VRC+ プロフィールアイコン",
                     "tooltips": "ツールチップ",
+                    "age_gated_instances": "年齢制限ありのインスタンスを表示",
                     "nicknames": "ニックネームにメモを表示",
                     "sort_favorite_by": "お気に入りを並び替え:",
                     "sort_favorite_by_name": "名前順",
@@ -406,7 +414,7 @@
                         "alphabetical": "アルファベット順",
                         "private_to_bottom": "プライベートを下に",
                         "status": "ステータス",
-                        "status_and_private_to_bottom": "ステータスとプライベートを下",
+                        "status_and_private_to_bottom": "ステータスとプライベートを下に",
                         "location": "場所",
                         "last_active": "最終活動時間",
                         "last_seen": "最後に見た日時",
@@ -452,6 +460,7 @@
                         "ovrtoolkit_hud_notifications": "OVR Toolkit HUD上での通知",
                         "ovrtoolkit_wrist_notifications": "OVR Toolkit手首上での通知",
                         "user_images": "ユーザー画像を使用 (遅い)",
+                        "notification_opacity": "通知の不透明度",
                         "notification_timeout": "通知のタイムアウト時間"
                     },
                     "conditions": {
@@ -513,7 +522,18 @@
                     "instance_type_player_count": "インスタンス詳細/プレイヤー数",
                     "join_button": "Joinボタンを表示 (パブリックのみ)",
                     "show_details_in_private": "プライベートでもワールド詳細を表示",
-                    "show_images": "ワールド画像を表示"
+                    "show_images": "ワールドの画像を表示",
+                    "show_current_platform": "プラットフォームを表示",
+                    "world_integration": "ワールド統合",
+                    "world_integration_tooltip": "Popcorn Palace、PyPyDance、VRDancing、LS Mediaの「視聴中/リスニング中」を表示",
+                    "display_world_name_as_discord_status": "ワールド名をDiscordステータスとして表示"
+                },
+                "rpc": {
+                    "vr": "VR",
+                    "desktop": "デスクトップ",
+                    "join_button": "入る",
+                    "powered_by_vrcx": "Powered by VRCX",
+                    "private_world": "プライベートなインスタンス"
                 }
             },
             "pictures": {
@@ -549,6 +569,10 @@
                         "header": "VRChat終了時にキャッシュを自動で管理する",
                         "description": "旧バージョンのキャッシュを自動削除"
                     },
+                    "self_invite": {
+                        "header": "自分を招待",
+                        "description": "VRChatを起動する代わりに、自分を招待する"
+                    },
                     "save_instance_prints_to_file": {
                         "header": "インスタンス内にあるプリントを、ローカルファイルに保存",
                         "header_tooltip": "「--enable-sdk-log-levels」オプションをつけて、VRChatを起動する必要があります。",
@@ -565,6 +589,13 @@
                     "save_instance_emoji_to_file": {
                         "header": "インスタンス内の絵文字をローカルファイルに保存",
                         "description": "出された絵文字をVRChatの画像フォルダに保存する"
+                    },
+                    "delete_all_screenshot_metadata": {
+                        "button": "スクリーンショットのメタデータを全て削除",
+                        "ask": "VRChatの写真フォルダから、すべてのVRChatおよびVRCXによる、スクリーンショットのメタデータを削除してもよろしいですか？",
+                        "confirm": "すべてのスクリーンショットのメタデータを削除することは、非常に破壊的な操作であり、元に戻すことはできません！これには、VRChatの写真フォルダ内のすべてのサブフォルダ、プリント、ステッカー、およびその他の無関係な画像が含まれます。これらの写真が大切なものである場合は、実行する前にバックアップを作成してください。",
+                        "confirm_yes": "削除する",
+                        "confirm_no": "削除しない"
                     },
                     "remote_database": {
                         "header": "リモートアバターデータベース",
@@ -604,7 +635,8 @@
                         "folder": "フォルダ",
                         "folder_tooltip": "VRChatと一緒に起動させたいアプリケーションのショートカットを配置してください。",
                         "enable": "有効化する",
-                        "auto_close": "VRChat終了時に自動終了"
+                        "auto_close": "VRChat終了時に自動終了",
+                        "run_process_once": "同じアプリケーションを一度だけ起動"
                     },
                     "cache_debug": {
                         "header": "VRCXインスタンス キャッシュ/デバッグ",
@@ -705,7 +737,9 @@
             "pronouns": "代名詞",
             "tags": {
                 "friend_no": "フレンド No.{number}",
-                "vrchat_team": "VRChatの運営"
+                "vrchat_team": "VRChatの運営",
+                "18_plus_verified": "18歳以上確認済み",
+                "age_verified": "年齢確認済み"
             },
             "badges": {
                 "assigned": "授与済",
@@ -722,6 +756,7 @@
                 "request_invite": "招待リクエストを送信",
                 "request_invite_with_message": "メッセージ付き招待リクエストを送信",
                 "invite_to_group": "グループに招待",
+                "group_moderation": "グループのモデレーション",
                 "send_boop": "Boopを送信",
                 "manage_gallery_inventory_icon": "ギャラリー/アイコンを管理",
                 "accept_friend_request": "フレンドリクエストを許可",
@@ -754,6 +789,7 @@
                 "header": "情報",
                 "launch_invite_tooltip": "起動/招待",
                 "self_invite_tooltip": "自分を招待",
+                "open_in_vrchat_tooltip": "VRChatで開く",
                 "refresh_instance_info": "インスタンス情報を更新",
                 "instance_queue": "待機列:",
                 "instance_users": "ユーザー数:",
@@ -875,6 +911,7 @@
                 "share": "共有",
                 "new_instance": "インスタンスを作成",
                 "new_instance_and_self_invite": "インスタンスを作成し、自分を招待する",
+                "new_instance_and_open_ingame": "インスタンスを作成し、VRChat内で開く",
                 "make_home": "ホームに設定",
                 "reset_home": "ホームをリセット",
                 "show_previous_instances": "以前のインスタンス",
@@ -991,7 +1028,9 @@
                 "platform": "プラットフォーム",
                 "time_spent": "過ごした時間",
                 "memo": "メモ (VRCX)",
-                "memo_placeholder": "クリックしてメモを追加"
+                "memo_placeholder": "クリックしてメモを追加",
+                "listings": "リスティング",
+                "gallery": "ギャラリー"
             },
             "json": {
                 "header": "JSON",
@@ -1059,7 +1098,7 @@
                 "role_updated_at": "更新日:",
                 "role_created_at": "作成日:",
                 "role_permissions": "権限:",
-                "last_visited": "最終訪問"
+                "last_visited": "最後に訪問した日時"
             },
             "posts": {
                 "header": "投稿",
@@ -1155,8 +1194,8 @@
             "group_access_type_plus": "プラス",
             "group_access_type_public": "パブリック",
             "region": "地域",
-            "region_usw": "アメリカ(西)",
-            "region_use": "アメリカ(東)",
+            "region_usw": "アメリカ (西)",
+            "region_use": "アメリカ (東)",
             "region_eu": "ヨーロッパ",
             "region_jp": "日本",
             "content_settings": "コンテンツ設定",
@@ -1187,7 +1226,8 @@
             "normal": "通常",
             "group": "グループ",
             "legacy": "レガシー",
-            "roles": "ロール"
+            "roles": "ロール",
+            "open_ingame": "VRChat内で開く"
         },
         "launch_options": {
             "header": "VRChat 起動オプション",
@@ -1288,7 +1328,12 @@
             "start_as_desktop": "デスクトップモードで起動 (VR無し)",
             "info": "情報",
             "invite": "招待",
-            "launch": "起動"
+            "launch": "起動",
+            "open_ingame": "VRChat内で開く",
+            "self_invite": "自分を招待",
+            "game_running_warning": "2つ目のVRChatインスタンスを起動してもよろしいですか？",
+            "confirm_yes": "はい",
+            "confirm_no": "いいえ"
         },
         "export_friends_list": {
             "header": "フレンドリスト",
@@ -1305,7 +1350,7 @@
         "notification_position": {
             "header": "通知の位置",
             "description": "通知の位置を選択してください。",
-            "ok": "OK"
+            "ok": "確定する"
         },
         "shared_feed_filters": {
             "notification": "通知フィルター",
@@ -1383,7 +1428,8 @@
             "choose_group_placeholder": "グループを選択",
             "groups": "グループ",
             "choose_friends_placeholder": "フレンドを選択",
-            "selected_users": "選択したユーザー"
+            "selected_users": "選択したユーザー",
+            "invite": "招待する"
         },
         "note_export": {
             "header": "ノートをエクスポート",
@@ -1391,7 +1437,7 @@
             "description2": "以下の制限にご注意ください:",
             "description3": "- APIエンドポイントにはレート制限があり、リクエストを送る際は間隔を開ける必要があります。",
             "description4": "- ノート1つにつき256文字の制限があります。",
-            "description5": "- 汚い言葉はフィルタリングされます (おふざけは禁止されています)。",
+            "description5": "- 汚い言葉はフィルタリングされます。(おふざけは禁止されています)",
             "description6": "- 改行はできません。スペースに置き換えられます。",
             "description7": "- 既にノートが設定されているユーザーのノートは上書きされます。",
             "description8": "- ここで編集した内容はVRCXのメモには影響しませんが、エクスポートされたVRChatのノートには影響します。",
@@ -1463,10 +1509,10 @@
             "emoji_animation_fps": "FPS:",
             "emoji_animation_frame_count": "フレーム数:",
             "emoji_loop_pingpong": "Loop PingPong",
-            "consume_bundle": "バンドルを消費",
             "flipbook_info": "アニメーション絵文字として使用する1024x1024pxのPNGスプライトシート画像を選択 (最大 64FPS)",
             "note": "ノート",
-            "crop_print_border": "Crop Print Border"
+            "crop_print_border": "写真の外枠をトリミングする",
+            "consume_bundle": "バンドルを消費"
         },
         "change_content_image": {
             "avatar": "アバターの画像を変更",
@@ -1487,7 +1533,7 @@
             "header": "更新履歴",
             "description": "将来のVRCXの開発を支援するために寄付をご検討ください。",
             "close": "閉じる",
-            "donate": "寄付",
+            "donate": "寄付する",
             "github": "GitHub"
         },
         "gallery_select": {
@@ -1514,6 +1560,7 @@
             "last_screenshot": "最後に見た画像",
             "copy_image": "画像をコピー",
             "open_folder": "フォルダを開く",
+            "delete_metadata": "メタデータを削除する",
             "upload": "アップロード"
         },
         "registry_backup": {
@@ -1527,7 +1574,8 @@
             "name": "名前",
             "date": "日付",
             "action": "アクション",
-            "auto_backup": "毎週の自動バックアップ",
+            "auto_backup": "3日毎の自動バックアップ (2週間後に削除されます)",
+            "ask_to_restore": "VRChatのレジストリ設定が存在しない場合に、復元を確認する",
             "restore_prompt": "VRChatのレジストリ設定の自動バックアップが有効なようですが、このコンピューターからバックアップファイルを見つけられませんでした。バックアップから復元したい場合はこちらから復元できます。"
         },
         "group_member_moderation": {
@@ -1572,6 +1620,7 @@
             "select_user": "ユーザーを選択",
             "selected_users": "選択したユーザー",
             "select_all": "全て選択",
+            "user_isnt_in_group": "ユーザーはグループに参加していません",
             "cancel": "キャンセル",
             "choose_roles_placeholder": "ロールを選択",
             "selected_roles": "選択したロール",
@@ -1605,6 +1654,15 @@
             "header": "ビデオプレーヤーでの使用が許可されているのドメイン",
             "add_domain": "ドメイン追加",
             "save": "保存"
+        },
+        "group_calendar": {
+            "header": "グループカレンダー"
+        },
+        "moderate_group": {
+            "header": "グループメンバーのモデレーション",
+            "choose_group_placeholder": "グループを選択",
+            "groups_with_moderation_permission": "モデレーション権限を持つグループ",
+            "moderation_tools": "モデレーションツール"
         }
     },
     "confirm": {
@@ -1672,7 +1730,11 @@
             "moderated": "ユーザーがモデレートされました"
         },
         "friend": {
-            "load_failed": "フレンドリストの読み込みに失敗しました、ログアウトしています"
+            "load_failed": "フレンドリストの読み込みに失敗しました、ログアウトします"
+        },
+        "screenshot_metadata": {
+            "deleted": "スクリーンショットのメタデータが削除されました",
+            "delete_failed": "スクリーンショットからの、メタデータの削除に失敗しました"
         }
     },
     "prompt": {
