Add tools tab and group calendar localization support

--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -250,6 +250,34 @@
                 }
             }
         },
+        "tools": {
+            "header": "Tools",
+            "group": {
+                "header": "Group",
+                "calendar": {
+                    "title": "Calendar",
+                    "info": "Group Events Calendar"
+                }
+            },
+            "image": {
+                "header": "Image",
+                "screenshot": {
+                    "title": "Screenshot Management",
+                    "info": "Manage screenshots and view metadata"
+                },
+                "vrchat_inventory": {
+                    "title": "VRC+ Images & Inventory Management",
+                    "info": "Manage VRC+ images and inventory"
+                }
+            },
+            "user": {
+                "header": "User",
+                "export_notes": {
+                    "title": "Export User Notes",
+                    "info": "Export VRCX user memos to VRChat notes"
+                }
+            }
+        },
         "profile": {
             "profile": {
                 "header": "Profile",
@@ -1656,7 +1684,18 @@
             "save": "Save"
         },
         "group_calendar": {
-            "header": "Group Calendar"
+            "header": "Group Calendar",
+            "no_events": "No events found",
+            "search_placeholder": "Search groups or events...",
+            "search_no_matching": "No matching events found",
+            "search_no_this_month": "No events this month",
+            "event_card": {
+                "category": "Category",
+                "interested_user": "Interested User",
+                "close_time": "Close Instance After End",
+                "created": "Created Date",
+                "description": "Description"
+            }
         },
         "moderate_group": {
             "header": "Moderate Group Member",
