chore(i18n): Update Chinese Simplified localization

--- a/src/localization/zh-CN/en.json
+++ b/src/localization/zh-CN/en.json
@@ -253,21 +253,21 @@
         "tools": {
             "header": "工具",
             "group": {
-                "header": "组织",
-                "calendar": "日历",
-                "calendar_description": "组织活动日历"
+                "header": "群组",
+                "calendar": "活动日历",
+                "calendar_description": "查看活动日历"
             },
             "image": {
                 "header": "相册",
-                "screenshot": "截屏管理",
+                "screenshot": "截图管理",
                 "screenshot_description": "管理截图或查看截图元数据",
-                "inventory": "拍立得 & 库存管理",
-                "inventory_description": "管理拍立得 & 库存"
+                "inventory": "相册 & 库存管理",
+                "inventory_description": "管理相册与库存物品"
             },
             "user": {
                 "header": "用户",
                 "export_notes": "导出备注",
-                "export_notes_description": "导出好友备注到文本文件"
+                "export_notes_description": "导出好友备注到文本文件中"
             }
         },
         "profile": {
@@ -454,7 +454,7 @@
                     "header": "玩家信息",
                     "vrchat_notes": "显示 VRChat 备注",
                     "vrcx_memos": "显示本地备注",
-                    "export_vrcx_memos_into_vrchat_notes": "将本地备注导出成 VRChat 备注",
+                    "export_vrcx_memos_into_vrchat_notes": "将本地备注转换成 VRChat 备注",
                     "export_notes": "导出备注"
                 },
                 "user_colors": {
@@ -516,7 +516,7 @@
                     "steamvr_overlay": "SteamVR 叠加界面",
                     "wrist_feed_overlay": "手腕动态叠加界面",
                     "hide_private_worlds": "隐藏私人世界",
-                    "start_overlay_with": "随.....一并启动",
+                    "start_overlay_with": "随...一并启动",
                     "overlay_button": "叠加界面按键",
                     "overlay_button_grip": "握持",
                     "overlay_button_menu": "菜单",
@@ -570,7 +570,7 @@
                 "advanced": {
                     "header": "高级设置",
                     "launch_options": "启动选项",
-                    "screenshot_metadata": "照片元数据查看器",
+                    "screenshot_metadata": "图片元数据查看器",
                     "vrc_registry_backup": "VRC 设置数据备份工具",
                     "common_folders": "常用文件夹",
                     "primary_password": {
@@ -591,7 +591,7 @@
                     },
                     "self_invite": {
                         "header": "自我邀请",
-                        "description": "自我邀请，而不是在 VRChat 中打开房间"
+                        "description": "给自己发送一个邀请通知，而不是在 VRChat 中直接打开对应房间"
                     },
                     "save_instance_prints_to_file": {
                         "header": "“拍立得”照片保存选项",
@@ -604,16 +604,16 @@
                     },
                     "save_instance_stickers_to_file": {
                         "header": "保存“表情贴纸”至图片",
-                        "description": "将房间内的“表情贴纸”保存到 VRChat 的照片文件夹中"
+                        "description": "将房间内的“表情贴纸”保存到 VRChat 的图片文件夹中"
                     },
                     "save_instance_emoji_to_file": {
                         "header": "保存“表情贴纸”至文件",
-                        "description": "保存生成的“表情贴纸”到 VRChat 的照片文件夹中"
+                        "description": "保存生成的“表情贴纸”到 VRChat 的图片文件夹中"
                     },
                     "delete_all_screenshot_metadata": {
                         "button": "删除截图元数据",
                         "ask": "你确定要从 VRChat 图片文件夹中删除所有由 VRC 和 VRCX 添加的截图元数据吗？",
-                        "confirm": "删除截图元数据是一个非常破坏性的操作，无法撤销！这包括你的 VRChat 图片文件夹中的所有拍立得图片，如果这些照片的元数据信息对你很珍贵，请在继续之前进行备份。",
+                        "confirm": "删除截图元数据是一个非常破坏性的操作，无法撤销！这包括你的 VRChat 图片文件夹中的所有拍立得照片，如果这些照片的元数据信息对你很珍贵，请在继续之前进行备份。",
                         "confirm_yes": "是，确认删除",
                         "confirm_no": "否，我再想想"
                     },
@@ -643,7 +643,7 @@
                     },
                     "screenshot_helper": {
                         "header": "截图助手",
-                        "description": "在游戏拍摄的照片的元数据中添加世界 ID/世界名称",
+                        "description": "在拍摄的照片的元数据中添加世界 ID/世界名称",
                         "description_tooltip": "不幸的是，Windows 并不支持直接查看 PNG 元数据（很多东西都不支持查看这玩意），但你可以使用 exiftool 等命令行工具、png查看器或十六进制编辑器来查看它们。",
                         "enable": "启用",
                         "modify_filename": "同时修改文件名",
@@ -1133,7 +1133,7 @@
                 "header": "成员",
                 "all_members": "成员列表",
                 "friends_only": "成员列表（仅显示好友）",
-                "load_more": "载入更多……",
+                "load_more": "载入更多...",
                 "sort_by": "排序设置：",
                 "sorting": {
                     "joined_at_asc": "加入时间（顺序）",
@@ -1245,7 +1245,7 @@
             "legacy": "传统",
             "roles": "身份组",
             "open_ingame": "在 VRChat 中打开",
-            "display_name": "昵称 (VRC+)"
+            "display_name": "自定义房间名称 (需要 VRC+)"
         },
         "launch_options": {
             "header": "启动选项",
@@ -1349,7 +1349,7 @@
             "launch": "启动",
             "open_ingame": "在 VRChat 中打开",
             "self_invite": "自我邀请",
-            "game_running_warning": "你确定要启动第二个 VRChat 程序吗？",
+            "game_running_warning": "你确定要启动第二个 VRChat 客户端吗？",
             "confirm_yes": "是，确认启动",
             "confirm_no": "否，我再想想"
         },
@@ -1530,7 +1530,11 @@
             "flipbook_info": "选择一个 1024x1024 的 PNG 精灵表作为动画表情（最大 FPS 为64）",
             "note": "备注",
             "crop_print_border": "裁剪白边",
-            "consume_bundle": "拆开"
+            "consume_bundle": "拆开",
+            "item": "物品",
+            "sticker": "贴纸",
+            "drone_skin": "无人机皮肤",
+            "emoji": "Emoji（表情）"
         },
         "change_content_image": {
             "avatar": "更改模型封面",
@@ -1670,16 +1674,16 @@
             "save": "保存"
         },
         "group_calendar": {
-            "header": "组织日历",
+            "header": "活动日历",
             "list_view": "列表视图",
             "calendar_view": "日历视图",
-            "no_events": "没有发现任何活动",
-            "search_placeholder": "搜索组织或活动...",
-            "search_no_matching": "没有找到任何活动",
-            "search_no_this_month": "这个月没有任何活动",
+            "no_events": "这天没有任何活动",
+            "search_placeholder": "搜索群组或活动...",
+            "search_no_matching": "没有找到任何符合条件的活动",
+            "search_no_this_month": "这个月没有活动举行",
             "event_card": {
                 "category": "类别",
-                "interested_user": "感兴趣的用户",
+                "interested_user": "感兴趣的人数",
                 "close_time": "结束后关闭房间",
                 "created": "创建日期",
                 "description": "描述"
@@ -1687,13 +1691,13 @@
         },
         "moderate_group": {
             "header": "管理群组成员",
-            "choose_group_placeholder": "选择群组....",
+            "choose_group_placeholder": "选择群组...",
             "groups_with_moderation_permission": "拥有管理权限的群组",
-            "moderation_tools": "管理工具"
+            "moderation_tools": "打开管理工具"
         },
         "fullscreen_image": {
-            "download_and_save_image": "下载并保存图像",
-            "copy_image_to_clipboard": "将图像复制到剪贴板"
+            "download_and_save_image": "下载并保存图片",
+            "copy_image_to_clipboard": "将图片复制到剪贴板"
         }
     },
     "confirm": {
