[fix] ja localize

--- a/src/localization/ja/en.json
+++ b/src/localization/ja/en.json
@@ -1352,7 +1352,7 @@
             "invite": "招待",
             "launch": "起動",
             "open_ingame": "ゲーム内で開く",
-            "self_invite": "自己招待",
+            "self_invite": "自分を招待",
             "game_running_warning": "本当に2つ目のVRChatインスタンスを起動しますか？",
             "confirm_yes": "はい",
             "confirm_no": "いいえ"
