[add] translator name

--- a/src/localization/ja/en.json
+++ b/src/localization/ja/en.json
@@ -1,6 +1,6 @@
 {
     "language": "日本語 (ja)",
-    "translator": "Assault1892, Yuu198, paralleltree, kazu3jp, Cayahuanca",
+    "translator": "Assault1892, Yuu198, paralleltree, kazu3jp, Cayahuanca, ecto0310",
     "nav_tooltip": {
         "feed": "フィード",
         "game_log": "ゲームログ",
