--- a/src/localization/en/en.json
+++ b/src/localization/en/en.json
@@ -409,6 +409,7 @@
                 "appearance": {
                     "header": "Appearance",
                     "language": "Language",
+                    "bio_language": "Bio Translation Language",
                     "theme_mode": "Theme",
                     "theme_mode_system": "System",
                     "theme_mode_light": "Light",
